# family-medical-app

./: .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  AGENTS.md  README.md  SECURITY.md  SETUP.md  clippy.toml  rustfmt.toml
.github/workflows/: backend-rust-ci.yml  backend-rust-cleanup.yml  codeql.yml  ios-ci.yml
backend/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
backend-rust/: Cargo.toml  wrangler.toml
backend-rust/src/: lib.rs  opaque.rs  rate_limit.rs  routes.rs
backend-rust/tests/: rate_limit_error_logging_test.rs  smoke_test.sh  test-login.sh
backend/src/: email.ts  index.ts  opaque.ts  rate-limit.ts
docs/: coding-practices.md  ios-password-autofill.md  swiftui-xcuitest-gotchas.md  testing-patterns.md
docs/adr/: README.md  adr-0001-crypto-architecture-first.md  adr-0002-key-hierarchy.md  adr-0003-multi-user-sharing-model.md  adr-0004-sync-encryption.md  adr-0005-access-revocation.md  adr-0006-test-coverage-requirements.md  adr-0007-schema-overlay-data-model.md  adr-0008-swift-6-concurrency.md  adr-0009-schema-evolution-multi-master.md  adr-0010-deterministic-testing-architecture.md  adr-0011-email-verification-backend.md  adr-0011-opaque-zero-knowledge-auth.md  adr-0012-json-schema-validation.md  adr-0012-opaque-zero-knowledge-auth.md  adr-0013-logging-privacy-and-export.md  adr-template.md
docs/adr/diagrams/: key-hierarchy-flow.md
docs/adr/examples/: key-hierarchy-poc.swift
docs/compliance/: encryption-export-compliance.md
docs/day-1-review/: 2026-04-18-detailed-report.md  2026-04-18-ready-to-fix.md  tracker.md
docs/plans/: 2026-01-28-opaque-zero-knowledge-auth.md  2026-01-28-recordwell-backend-deployment.md  2026-01-29-rust-opaque-worker.md
docs/privacy/: access-revocation-disclosures.md
docs/research/: README.md  e2ee-sharing-patterns-research.md  poc-hybrid-family-keys.swift  poc-public-key-sharing.swift  poc-symmetric-key-wrapping.swift  privacy-and-data-exposure-analysis.md
docs/schemas/: backup-v1.json
docs/security/: access-revocation-threat-analysis.md  key-rotation-strategy.md
docs/technical/: access-revocation-implementation.md  audit-log-signatures.md  s3-backend-design.md  schema-evolution-design.md  sync-attachment-deduplication-security.md  sync-implementation-details.md  wiki-style-versioning.md
family-medical-favicon/: site.webmanifest
ios/: .gitignore
ios/FamilyMedicalApp/: .gitignore  FamilyMedicalApp.xctestplan  Info.plist  apple-app-site-association
ios/FamilyMedicalApp/FamilyMedicalApp/: ContentView.swift  FamilyMedicalApp.entitlements  FamilyMedicalAppApp.swift
ios/FamilyMedicalApp/FamilyMedicalApp.xcodeproj/: project.pbxproj
ios/FamilyMedicalApp/FamilyMedicalApp/Extensions/: OptionalString+Trimming.swift  String+FilenameExtension.swift  UUID+Zero.swift
ios/FamilyMedicalApp/FamilyMedicalApp/Models/: Attachment.swift  DecryptedRecord.swift  FieldDefinition.swift  FieldTransformation.swift  FieldValue.swift  FieldVisibility.swift  MedicalRecord.swift  MigrationTypes.swift  ModelError+UserFacing.swift  ModelErrors.swift  Person.swift  Provider.swift  RecordContent.swift  (+3 more)
ios/FamilyMedicalApp/FamilyMedicalAppTests/: ContentViewTests.swift  FamilyMedicalAppAppTests.swift  FamilyMedicalAppTests.swift
ios/FamilyMedicalApp/FamilyMedicalAppUITests/: AddPersonFlowUITests.swift  AttachmentFlowUITests.swift  BackupFlowUITests.swift  DemoModeUITests.swift  ExistingUserFlowUITests.swift  FamilyMedicalAppUITests.swift  FamilyMedicalAppUITestsLaunchTests.swift  MedicalRecordFlowUITests.swift  NewUserFlowUITests.swift
ios/well-known/: apple-app-site-association
opaque-swift/: .gitignore  Cargo.toml  Package.swift  build-xcframework.sh
opaque-swift/Sources/OpaqueSwift/: opaque_swift.swift
opaque-swift/Sources/OpaqueSwiftFFI/: module.modulemap  opaque_swiftFFI.h
opaque-swift/src/: lib.rs
scripts/: check-coverage.sh  check-no-xctest-in-unit-tests.sh  gh_pr_comment_action.sh  gh_pr_comments_fetch.sh  run-tests.sh  validate-backup-schema.sh  verify-setup.sh
(+433 files in other folders)
