[package]
name = "recordwell-opaque-worker"
version = "0.1.0"
edition = "2021"
description = "OPAQUE authentication worker for RecordWell"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7"
worker-macros = "0.7"
opaque-ke = { version = "4", features = ["argon2"] }
argon2 = "0.5"
sha2 = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[[bin]]
name = "generate_setup"
path = "src/bin/generate_setup.rs"

[profile.release]
opt-level = "s"
lto = true
