[package]
name = "recordwell-opaque-worker"
version = "0.1.0"
edition = "2021"
description = "OPAQUE authentication worker for RecordWell"

[lib]
# `cdylib` is required for the wasm worker build; `rlib` is required so
# integration tests in `tests/` can link against the library and exercise
# modules gated behind the `testing` feature (see `tests/rate_limit_error_logging_test.rs`).
crate-type = ["cdylib", "rlib"]

[features]
# Exposes internal test hooks (`__test_hooks` module) so integration tests in
# `tests/` can drive `check_rate_limit_inner` with a fake KV store. NOT enabled
# in release builds and NOT part of the public API. Integration tests that
# need it declare `required-features = ["testing"]` in `[[test]]` below.
testing = []

[[test]]
name = "rate_limit_error_logging_test"
required-features = ["testing"]

[dependencies]
worker = "0.7"
worker-macros = "0.7"
opaque-ke = { version = "4", features = ["argon2"] }
argon2 = "0.5"
sha2 = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[[bin]]
name = "generate_setup"
path = "src/bin/generate_setup.rs"

[profile.release]
opt-level = "s"
lto = true
